fixed text align on search page

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 }
 
 .App {
-  text-align: center;
+  /* text-align: center; */
   font: 16px/1.5 'Urbanist', sans-serif;
   width: 100%;
   height: 100%;
