--- a/src/Pages/Home/Artists/style.css
+++ b/src/Pages/Home/Artists/style.css
@@ -33,7 +33,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: 24px;
-  text-align: left;
+  text-align: justify !important;
 }
 
 .artist-description-2{
@@ -44,7 +44,7 @@
   font-style: normal;
   font-weight: 400;
   line-height: 24px;
-  text-align: left;
+  text-align: justify !important;
 }
 .artist-name{
   color: var(--Base-base-500, #252733);
